fix: :bug: Organizando cabeçalho
Organizando cabeçalho

--- a/dwba4-semana-06-PT3025616/src/styles/header.css
+++ b/dwba4-semana-06-PT3025616/src/styles/header.css
@@ -22,9 +22,7 @@ body {
   text-decoration: none;
 }
 
-/* Tem que mandar essa porra à esquerda caralho */
-
-.navbar a #sobre {
+.navbar a:last-of-type {
   float: right;
 }
 
