--- a/dwba4-semana-06-PT3025616/src/styles/body.css
+++ b/dwba4-semana-06-PT3025616/src/styles/body.css
@@ -4,14 +4,22 @@
 */
 
 body > div:nth-child(n + 2) {
+  width: 390px;
+
   margin-left: auto;
   margin-right: auto;
-  width: 390px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 h3 {
+  margin-top: 50px;
+  margin-bottom: 25px;
+
   display: flex;
-  justify-content: center; /* Centraliza os itens na horizontal */
+  justify-content: center;
 }
 
 /*
@@ -21,4 +29,15 @@ h3 {
 
 body > div:first-of-type img:first-of-type {
   border-radius: 50%;
+}
+
+#paragrafo {
+  width: 95%;
+
+  justify-content: center;
+  display: flex;
+
+  border-style: dashed;
+  border-color: black;
+  border-width: 1px;
 }
