--- a/dwba4-semana-06-PT3025616/src/styles/pages/eventos.css
+++ b/dwba4-semana-06-PT3025616/src/styles/pages/eventos.css
@@ -45,6 +45,7 @@ body > form > input:last-of-type {
 
   background-color: #449c44;
   border-width: 0px;
+  border-radius: 2px;
 
   color: white;
 }
