--- a/menu/style.css
+++ b/menu/style.css
@@ -39,6 +39,10 @@ h1 {
   display: flex;
   justify-content: center;
   transition: text-shadow 0.3s ease-in-out;
+
+  font-size: 2.5em;
+  color: white;
+  text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
 }
 
 h1:hover {
@@ -48,13 +52,34 @@ h1:hover {
 a {
   color: inherit;
   text-decoration: none;
+
+  font-size: 2.5em;
+  color: white;
+  text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
+
   transition: background-color 0.3s ease-in-out 0.1s,
-    font-weight 0.3s ease-in-out 0.1s;
+    font-weight 0.3s ease-in-out 0.1s, opacity 0.3s ease-in-out;
+
+  animation: shineAnimation 10s ease-in-out infinite alternate;
+}
+
+@keyframes shineAnimation {
+  0% {
+    opacity: 0.7;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.7;
+  }
 }
 
 a:hover {
   background-color: rgba(52, 152, 219, 0.5);
   font-weight: 500;
+  animation-play-state: paused;
+  opacity: 1;
 }
 
 .grid-container {
