style: :lipstick: Centralizando o iframe do vídeo do youtube

--- a/dwba4-semana-09-PT3025616/src/styles/slide.css
+++ b/dwba4-semana-09-PT3025616/src/styles/slide.css
@@ -6,6 +6,10 @@
   margin-top: 3%;
 }
 
+.slideshow-container > div > iframe {
+  margin: 0 0 0 23%;
+}
+
 /* Hide the images by default */
 .mySlides {
   display: none;
