--- a/dwba4-semana-07-PT3025616/src/styles/commom/header.css
+++ b/dwba4-semana-07-PT3025616/src/styles/commom/header.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: Helvetica, Arial, sans-serif;
+}
+
 .navbar {
   overflow: hidden;
   background-color: #333;
